feat(dictation): global transcription + meeting notes

--- a/gui/skills-tree.html
+++ b/gui/skills-tree.html
@@ -6,7 +6,7 @@
   <title>Agent Nexus - Phantom</title>
   <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
   <link rel="stylesheet" href="fonts/fonts.css" />
-  <link rel="stylesheet" type="text/css" href="main.css" />
+  <link rel="stylesheet" type="text/css" href="main.css?v=1.0.3.5" />
   <link rel="stylesheet" href="fontawesome/fontawesome-all.css" />
   <style>
     /* ========================================
@@ -1449,7 +1449,7 @@
     </div>
   </div>
 
-  <script src="js/tauri-bridge.js"></script>
+  <script src="js/tauri-bridge.js?v=1.0.3.2"></script>
   <script>
     // ========================================
     // SKILL TREE CONTROLLER
