--- a/gui/agent_notification.html
+++ b/gui/agent_notification.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Agent Notification</title>
-  <link rel="stylesheet" type="text/css" href="main.css">
+  <link rel="stylesheet" type="text/css" href="main.css?v=1.0.3.5">
   <link rel="stylesheet" href="vendor/bootstrap.min.css">
   <link rel="stylesheet" href="fontawesome/fontawesome-all.css">
   <link rel="stylesheet" href="fonts/fonts.css">
@@ -145,7 +145,7 @@
     </div>
   </div>
 
-  <script src="js/tauri-bridge.js"></script>
+  <script src="js/tauri-bridge.js?v=1.0.3.2"></script>
   <script src="js/agent_notification.js"></script>
 </body>
 </html>
