--- a/gui/boot.html
+++ b/gui/boot.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="fonts/fonts.css">
 
 
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="main.css?v=1.0.3.5">
     <link rel="stylesheet" href="vendor/bootstrap.min.css">
     <link rel="stylesheet" href="fontawesome/fontawesome-all.css">
 
