--- a/gui/index.html
+++ b/gui/index.html
@@ -16,7 +16,7 @@
     <script>
       if (window.module) module = window.module;
     </script>
-    <link rel="stylesheet" type="text/css" href="main.css" />
+    <link rel="stylesheet" type="text/css" href="main.css?v=1.0.3.5" />
     <link rel="stylesheet" href="fonts/fonts.css" />
     <link rel="stylesheet" href="vendor/bootstrap.min.css" />
     <style type="text/css">
