fix(notes): defer permissions and simplify recording toolbar

--- a/gui/index.html
+++ b/gui/index.html
@@ -12,13 +12,13 @@
         module = undefined;
       }
     </script>
-    <script src="js/vendor/jquery.js"></script>
+    <script src="js/vendor/jquery.js?v=1.0.3.9"></script>
     <script>
       if (window.module) module = window.module;
     </script>
-    <link rel="stylesheet" type="text/css" href="main.css?v=1.0.3.5" />
-    <link rel="stylesheet" href="fonts/fonts.css" />
-    <link rel="stylesheet" href="vendor/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="main.css?v=1.0.3.9" />
+    <link rel="stylesheet" href="fonts/fonts.css?v=1.0.3.9" />
+    <link rel="stylesheet" href="vendor/bootstrap.min.css?v=1.0.3.9" />
     <style type="text/css">
       .pulse {
         border: 2px solid transparent;
@@ -116,7 +116,7 @@
         </div>
       </div>
     </div>
-    <script src="js/vendor/popper.min.js"></script>
-    <script src="js/vendor/bootstrap.min.js"></script>
+    <script src="js/vendor/popper.min.js?v=1.0.3.9"></script>
+    <script src="js/vendor/bootstrap.min.js?v=1.0.3.9"></script>
   </body>
 </html>
