--- a/gui/skills-tree.html
+++ b/gui/skills-tree.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Agent Nexus - Phantom</title>
   <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
-  <link rel="stylesheet" href="fonts/fonts.css" />
-  <link rel="stylesheet" type="text/css" href="main.css?v=1.0.3.5" />
-  <link rel="stylesheet" href="fontawesome/fontawesome-all.css" />
+  <link rel="stylesheet" href="fonts/fonts.css?v=1.0.3.9" />
+  <link rel="stylesheet" type="text/css" href="main.css?v=1.0.3.9" />
+  <link rel="stylesheet" href="fontawesome/fontawesome-all.css?v=1.0.3.9" />
   <style>
     /* ========================================
        SKILL TREE - GAME UI STYLES
@@ -1449,7 +1449,7 @@
     </div>
   </div>
 
-  <script src="js/tauri-bridge.js?v=1.0.3.2"></script>
+  <script src="js/tauri-bridge.js?v=1.0.3.9"></script>
   <script>
     // ========================================
     // SKILL TREE CONTROLLER
