--- a/gui/boot.html
+++ b/gui/boot.html
@@ -11,15 +11,14 @@
     }
   </script>
 
-    <script src="js/vendor/jquery.js"></script>
-    <script src="js/vendor/jquery_ui.js"></script>
+    <script src="js/vendor/jquery.js?v=1.0.3.9"></script>
+    <script src="js/vendor/jquery_ui.js?v=1.0.3.9"></script>
 
-    <link rel="stylesheet" href="fonts/fonts.css">
+    <link rel="stylesheet" href="fonts/fonts.css?v=1.0.3.9">
 
-
-    <link rel="stylesheet" type="text/css" href="main.css?v=1.0.3.5">
-    <link rel="stylesheet" href="vendor/bootstrap.min.css">
-    <link rel="stylesheet" href="fontawesome/fontawesome-all.css">
+    <link rel="stylesheet" type="text/css" href="main.css?v=1.0.3.9">
+    <link rel="stylesheet" href="vendor/bootstrap.min.css?v=1.0.3.9">
+    <link rel="stylesheet" href="fontawesome/fontawesome-all.css?v=1.0.3.9">
 
   <script>
     if (window.module) module = window.module;
