feat(cmdk): add exact toggle and indexing indicator

--- a/gui/menu.html
+++ b/gui/menu.html
@@ -1925,6 +1925,13 @@
             <div class="notes-palette-hint">
               <kbd>↑</kbd><kbd>↓</kbd> Navigate <kbd>↵</kbd> Open
             </div>
+            <div class="notes-palette-controls">
+              <div class="notes-palette-status" id="notesPaletteIndexStatus" aria-live="polite"></div>
+              <label class="notes-palette-toggle" title="Exact (keyword-only, no semantic rerank)">
+                <input type="checkbox" id="notesPaletteExactToggle">
+                <span>Exact</span>
+              </label>
+            </div>
           </div>
         </div>
       </div>
