feat: local hybrid semantic search + global Cmd+K palette (#29)
* feat(db): add semantic_chunks table scaffold

* chore: ignore ralph artifacts

* feat(db): add best-effort semantic_fts table

* feat(search): add semantic search module scaffold

* feat(search): add semantic_index_status command

* chore(fmt): rustfmt dictation

* feat(search): add keyword semantic_search command

* feat(search): add semantic reindex and delete commands

* feat(ui): global Cmd+K search palette

* feat(search): use FTS5 for keyword semantic_search

* chore(build): add pinned Rust toolchain

* feat(embeddings): scaffold model spec and paths

* chore(plan): avoid premature completion sentinel

* feat(embeddings): download model with progress + cancel

* feat(embeddings): add local embedding inference

* feat(semantic): pack embeddings as f32 blobs

* feat(semantic): add debounced embedding indexer

* feat(semantic): schedule note indexing on meeting updates

* feat(search): hybrid vector rerank for semantic_search

* chore(plan): mark hybrid rerank complete

* feat(cmdk): add exact toggle and indexing indicator

* feat(notes): semantic-first sidebar search

* fix(search): harden semantic search and cmdk races

* fix(search): use tauri bridge and cleanup semantic rows

* fix(parakeet): show progress when content length missing

* fix(search): resolve Result alias and clear palette state

--- a/gui/menu.html
+++ b/gui/menu.html
@@ -1903,30 +1903,38 @@
           </div>
         </div>
 
-        <!-- Cmd+K Search Palette -->
-        <div class="notes-palette-overlay" id="notesSearchPalette" hidden>
-          <div class="notes-palette" role="dialog" aria-modal="true" aria-label="Search notes">
-            <div class="notes-palette-top">
-              <i class="fal fa-search notes-palette-icon"></i>
-              <input
-                type="text"
-                id="notesPaletteInput"
-                class="notes-palette-input"
-                placeholder="Search people, folders, companies, or meetings"
-                autocomplete="off"
-                spellcheck="false"
-              >
-              <kbd class="notes-palette-kbd">esc</kbd>
+      </section>
+
+      <!-- Cmd+K Search Palette (global) -->
+      <div class="notes-palette-overlay" id="notesSearchPalette" hidden>
+        <div class="notes-palette" role="dialog" aria-modal="true" aria-label="Search">
+          <div class="notes-palette-top">
+            <i class="fal fa-search notes-palette-icon"></i>
+            <input
+              type="text"
+              id="notesPaletteInput"
+              class="notes-palette-input"
+              placeholder="Search tasks and notes"
+              autocomplete="off"
+              spellcheck="false"
+            >
+            <kbd class="notes-palette-kbd">esc</kbd>
+          </div>
+          <div class="notes-palette-results" id="notesPaletteResults"></div>
+          <div class="notes-palette-footer">
+            <div class="notes-palette-hint">
+              <kbd>↑</kbd><kbd>↓</kbd> Navigate <kbd>↵</kbd> Open
             </div>
-            <div class="notes-palette-results" id="notesPaletteResults"></div>
-            <div class="notes-palette-footer">
-              <div class="notes-palette-hint">
-                <kbd>↑</kbd><kbd>↓</kbd> Navigate <kbd>↵</kbd> Open
-              </div>
+            <div class="notes-palette-controls">
+              <div class="notes-palette-status" id="notesPaletteIndexStatus" aria-live="polite"></div>
+              <label class="notes-palette-toggle" title="Exact (keyword-only, no semantic rerank)">
+                <input type="checkbox" id="notesPaletteExactToggle">
+                <span>Exact</span>
+              </label>
             </div>
           </div>
         </div>
-      </section>
+      </div>
 
       <!--Settings Page-->
       <section
