feat(shared-context): local contexts + prompt hydration

--- a/gui/menu.html
+++ b/gui/menu.html
@@ -275,6 +275,10 @@
                         <label class="muted-label">Base Branch</label>
                         <div id="baseBranchDropdown" class="custom-dropdown-wrapper"></div>
                       </div>
+                      <div class="form-group mb-3">
+                        <label class="muted-label">Context</label>
+                        <div id="contextDropdown" class="custom-dropdown-wrapper"></div>
+                      </div>
                       <div class="settings-stack">
                         <div class="setting-row">
                           <div class="setting-label">
