--- a/gui/menu.html
+++ b/gui/menu.html
@@ -757,7 +757,7 @@
                         class="form-control auth-input auth-env-input"
                         data-auth-key="claudeCodeEnv"
                         data-auth-allow-empty="true"
-                        placeholder="# One KEY=VALUE per line\n# Example: AWS Bedrock\nAWS_REGION=us-east-1\nAWS_PROFILE=default\n# Or explicit credentials:\nAWS_ACCESS_KEY_ID=YOUR_ACCESS_KEY_ID\nAWS_SECRET_ACCESS_KEY=YOUR_SECRET_ACCESS_KEY\nAWS_SESSION_TOKEN=YOUR_SESSION_TOKEN\n# Or Bedrock API key auth:\nAWS_BEARER_TOKEN_BEDROCK=YOUR_BEDROCK_API_KEY"
+                        placeholder="# One KEY=VALUE per line&#10;# Example: AWS Bedrock&#10;AWS_REGION=us-east-1&#10;AWS_PROFILE=default&#10;# Or explicit credentials:&#10;AWS_ACCESS_KEY_ID=YOUR_ACCESS_KEY_ID&#10;AWS_SECRET_ACCESS_KEY=YOUR_SECRET_ACCESS_KEY&#10;AWS_SESSION_TOKEN=YOUR_SESSION_TOKEN&#10;# Or Bedrock API key auth:&#10;AWS_BEARER_TOKEN_BEDROCK=YOUR_BEDROCK_API_KEY"
                       ></textarea>
                       <div class="auth-env-hint">
                         Passed to the Claude Code CLI process. Comments starting with
