--- a/gui/menu.html
+++ b/gui/menu.html
@@ -750,6 +750,20 @@
                         data-auth-key="anthropicApiKey"
                         placeholder="sk-ant-..."
                       />
+                      <label class="muted-label auth-env-label"
+                        >Claude Code environment variables</label
+                      >
+                      <textarea
+                        class="form-control auth-input auth-env-input"
+                        data-auth-key="claudeCodeEnv"
+                        data-auth-allow-empty="true"
+                        placeholder="# One KEY=VALUE per line&#10;# Example: AWS Bedrock&#10;AWS_REGION=us-east-1&#10;AWS_PROFILE=default&#10;# Or explicit credentials:&#10;AWS_ACCESS_KEY_ID=YOUR_ACCESS_KEY_ID&#10;AWS_SECRET_ACCESS_KEY=YOUR_SECRET_ACCESS_KEY&#10;AWS_SESSION_TOKEN=YOUR_SESSION_TOKEN&#10;# Or Bedrock API key auth:&#10;AWS_BEARER_TOKEN_BEDROCK=YOUR_BEDROCK_API_KEY"
+                      ></textarea>
+                      <div class="auth-env-hint">
+                        Passed to the Claude Code CLI process. Comments starting with
+                        <code>#</code> are ignored. Keys like
+                        <code>ANTHROPIC_API_KEY</code> are managed above.
+                      </div>
                       <div class="auth-footer">
                         <p class="auth-help">
                           Use CLI login or an API key for Claude Code.
