--- a/gui/menu.html
+++ b/gui/menu.html
@@ -239,6 +239,32 @@
                           <label class="muted-label">Model</label>
                           <div id="execModelDropdown" class="custom-dropdown-wrapper"></div>
                         </div>
+                        <div class="form-group col-4" id="planModeGroup">
+                          <label class="muted-label">Plan Mode</label>
+                          <div
+                            class="toggle-buttons"
+                            data-toggle="plan-mode"
+                          >
+                            <button
+                              class="toggle-button"
+                              type="button"
+                              data-value="false"
+                            >
+                              Off
+                            </button>
+                            <button
+                              class="toggle-button"
+                              type="button"
+                              data-value="true"
+                            >
+                              On
+                            </button>
+                            <input
+                              type="checkbox"
+                              id="planModeToggle"
+                            />
+                          </div>
+                        </div>
                         <div class="form-group col-4" id="reasoningEffortGroup" style="display: none;">
                           <label class="muted-label">Thinking Level</label>
                           <div id="reasoningEffortDropdown" class="custom-dropdown-wrapper"></div>
